added initial nav bar

--- a/hrapp/static/styles/base.css
+++ b/hrapp/static/styles/base.css
@@ -8,3 +8,15 @@ body {
 .main-content {
   padding: 1em 2em;
 }
+
+.navList {
+  list-style-type: none;
+  display: flex;
+  border: 1px solid lightgray;
+  padding: 1em;
+  margin: 0;
+}
+
+.navList__route {
+  margin: 0 0.5em;
+}
