--- a/hrapp/templates/shared/base.html
+++ b/hrapp/templates/shared/base.html
@@ -20,7 +20,8 @@
             <li class="navList__route"><a href="{% url 'hrapp:home' %}">Employees</a></li>
             <li class="navList__route"><a href="{% url 'hrapp:home' %}">Departments</a></li>
             <li class="navList__route"><a href="{% url 'hrapp:home' %}">Computers</a></li>
-            <li class="navList__route"><a href="{% url 'hrapp:home' %}">Training Programs</a></li>
+            <li class="navList__route"><a href="{% url 'hrapp:training_list' %}">Training Programs</a></li>
+            <li class="navList__route"><a href="{% url 'hrapp:login' %}">Login</a></li>
             <li class="navList__route"><a href="{% url 'hrapp:home' %}">Logout</a></li>
         </ol>
     </nav>
