listing out employees and their current computer. Also added the model_factory function

--- a/hrapp/templates/employees/employees_list.html
+++ b/hrapp/templates/employees/employees_list.html
@@ -6,8 +6,8 @@
 <ol>
 {% for employee in employees %}
     <li>
-        <p>{{ employee }}</p>
-        Current computer: {{employee.computer}}
+        <p>{{ employee.first_name }} {{ employee.last_name }}</p>
+        Current computer: {{employee.make}}
     </li>
 {% endfor %}
 </ol>
