--- a/hrapp/templates/shared/base.html
+++ b/hrapp/templates/shared/base.html
@@ -19,7 +19,7 @@
             <li class="navList__route"><a href="{% url 'hrapp:home' %}">Home</a></li>
             <li class="navList__route"><a href="{% url 'hrapp:home' %}">Employees</a></li>
             <li class="navList__route"><a href="{% url 'hrapp:home' %}">Departments</a></li>
-            <li class="navList__route"><a href="{% url 'hrapp:home' %}">Computers</a></li>
+            <li class="navList__route"><a href="{% url 'hrapp:computer_list' %}">Computers</a></li>
             <li class="navList__route"><a href="{% url 'hrapp:home' %}">Training Programs</a></li>
             <li class="navList__route"><a href="{% url 'hrapp:home' %}">Logout</a></li>
         </ol>
