--- a/hrapp/templates/employees/form.html
+++ b/hrapp/templates/employees/form.html
@@ -26,7 +26,7 @@
       <label for="department">Department: </label>
       <select id="department" type="text" name="department">
             {% for department in departments %}
-                <option {% if department.id == employee.department_id_id %}selected{% endif %}>{{ department.dept_name }}</option>
+                <option value="{{ department.id }}" {% if department.id == employee.department_id_id %}selected{% endif %}>{{ department.dept_name }}</option>
             {% endfor %}
       </select>
   </fieldset>
