committing to check other branch

--- a/hrapp/templates/computers/computer_list.html
+++ b/hrapp/templates/computers/computer_list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-  <h1>Books</h1>
+  <h1>Computers</h1>
 
   {% comment %} <a href="{% url 'hrapp:computer_form' %}">Add Computer to Inventory</a> {% endcomment %}
 
