added form val for budget

--- a/hrapp/templates/departments/form.html
+++ b/hrapp/templates/departments/form.html
@@ -17,7 +17,7 @@
         </fieldset>
         <fieldset>
             <label for="budget">Budget: $ </label>
-            <input id="budget" type="text" name="budget" value="{{ department.budget }}">
+            <input  " id="budget" type="number" name="budget" value="{{ department.budget }}">
         </fieldset>
 
 
