--- a/hrapp/templates/computers/computer_list.html
+++ b/hrapp/templates/computers/computer_list.html
@@ -4,7 +4,7 @@
 
   <h1>Computers</h1>
 
-  {% comment %} <a href="{% url 'hrapp:computer_form' %}">Add Computer to Inventory</a> {% endcomment %}
+  <a href="{% url 'hrapp:computer_form' %}">Add Computer to Inventory</a>
 
     <ol>
     {% for computer in all_computers %}
