--- a/hrapp/templates/shared/base.html
+++ b/hrapp/templates/shared/base.html
@@ -22,7 +22,7 @@
             <li class="navList__route"><a href="{% url 'hrapp:computer_list' %}">Computers</a></li>
             <li class="navList__route"><a href="{% url 'hrapp:training_list' %}">Training Programs</a></li>
             <li class="navList__route"><a href="{% url 'hrapp:login' %}">Login</a></li>
-            <li class="navList__route"><a href="{% url 'hrapp:home' %}">Logout</a></li>
+            <li class="navList__route"><a href="{% url 'hrapp:logout' %}">Logout</a></li>
         </ol>
     </nav>
 
