conditionally render employee list header

--- a/hrapp/templates/departments/details.html
+++ b/hrapp/templates/departments/details.html
@@ -5,13 +5,16 @@
 
         <h1>{{ department.dept_name }}</h1>
         <h3>Budget: ${{department.budget|intcomma}}</h3>
+        {% if dept_employees|length is not 0 %}
+        <h3>Employee List</h3>
+        {% endif %}
+
         {% for employee in dept_employees %}
         {% if employee.is_supervisor %}
-            <h3>Supervisor: {{ employee.first_name }} {{employee.last_name}}</h3>
-
+            <p><strong>- {{ employee.first_name }} {{employee.last_name}} (S)</strong></p>
         {% endif %}
         {% endfor %}
-            <h3>Employee List</h3>
+
         {% for employee in dept_employees %}
         {% if employee.is_supervisor is 0 %}
             <p>- {{employee.first_name}} {{employee.last_name}}</p>
