Training form added

--- a/hrapp/templates/training_programs/training_list.html
+++ b/hrapp/templates/training_programs/training_list.html
@@ -2,11 +2,11 @@
 
 {% block content %}
 <h1>Training Programs</h1>
-
+<a href="{% url 'hrapp:training_form' %}">Add Another Training Form</a>
 <ol>
 {% for program in all_training_programs %}
     <li>
-    {% comment %} <a href="{% url 'hrapp:training_list' program.id %}"> {% endcomment %}
+    <a href="{% url 'hrapp:program' program.id %}">
         <p>{{ program.title }}</p>
     </li>
 {% endfor %}
