--- a/hrapp/templates/training_programs/training_list.html
+++ b/hrapp/templates/training_programs/training_list.html
@@ -6,8 +6,7 @@
 <ol>
 {% for program in all_training_programs %}
     <li>
-    <a href="{% url 'hrapp:program' program.id %}">
-        <p>{{ program.title }}</p>
+        <p><a href="{% url 'hrapp:program' program.id %}">{{ program.title }}</p>
     </li>
 {% endfor %}
 </ol>
