--- a/hrapp/templates/computers/computer_list.html
+++ b/hrapp/templates/computers/computer_list.html
@@ -1,8 +1,15 @@
 {% extends 'shared/base.html' %}
 
 {% block content %}
-
+  <div class="parent">
   <h1>Books</h1>
+  <form action="{% url 'hrapp:department_list' %}" method="post">
+        <fieldset>
+            {% comment %} <label for="search">search: </label> {% endcomment %}
+            <input id="search" type="text" name="search" placeholder="Computer Make or Model">
+        </fieldset>
+  </form>
+  </div>
 
   {% comment %} <a href="{% url 'hrapp:computer_form' %}">Add Computer to Inventory</a> {% endcomment %}
 
