Date formatting working

--- a/hrapp/templates/training_programs/training_form.html
+++ b/hrapp/templates/training_programs/training_form.html
@@ -17,7 +17,7 @@
         </fieldset>
         <fieldset>
             <label for="start_date">Start Date: </label>
-            <input type="date" id="start_date" name="start_date" value="{{ Program.start_date }}">
+            <input type="date" id="start_date" name="start_date" value="{{ Start }}">
         </fieldset>
         <fieldset>
             <label for="end_date">End Date: </label>
