Create, edit and delete working for training programs

--- a/hrapp/templates/training_programs/training_form.html
+++ b/hrapp/templates/training_programs/training_form.html
@@ -21,7 +21,7 @@
         </fieldset>
         <fieldset>
             <label for="end_date">End Date: </label>
-            <input type="date" id="end_date" name="end_date" value="{{ Program.end_date }}">
+            <input type="date" id="end_date" name="end_date" value="{{ End }}">
         </fieldset>
         <fieldset>
             <label for="capacity">Capacity: </label>
