--- a/hrapp/templates/computers/computer_list.html
+++ b/hrapp/templates/computers/computer_list.html
@@ -3,7 +3,9 @@
 {% block content %}
   <div class="parent">
   <h1>Computers</h1>
-  <form action="{% url 'hrapp:department_list' %}" method="post">
+  <form action="{% url 'hrapp:computer_search' %}" method="get">
+  {% csrf_token %}
+
         <fieldset>
             {% comment %} <label for="search">search: </label> {% endcomment %}
             <input id="search" type="text" name="search" placeholder="Computer Make or Model">
