--- a/hrapp/templates/computers/computer_list.html
+++ b/hrapp/templates/computers/computer_list.html
@@ -3,8 +3,8 @@
 {% block content %}
   <div class="parent">
   <h1>Computers</h1>
-  <form action="{% url 'hrapp:computer_search' %}" method="get">
-  {% csrf_token %}
+  <form action="{% url 'hrapp:computer_search' %}" method="post">
+
 
         <fieldset>
             {% comment %} <label for="search">search: </label> {% endcomment %}
