got basic details to work

--- a/hrapp/templates/computers/computer_details.html
+++ b/hrapp/templates/computers/computer_details.html
@@ -5,13 +5,15 @@
   <section id="computer-details">
         <h1>{{ computer.make }} {{ computer.model }}</h1>
 
-        <div>date purchased {{ computer.purchas_date }}</div>
+        <div>date purchased {{ computer.purchase_date }}</div>
         {% if computer.decommission_date %}
             <div>decommissoned date: {{ computer.decommission_date }}</div>
         {% endif %}
         {% for employee in employees %}
         {% if employee.computer_id_id == computer.id %}
         <div> current assigned employee: {{ employee.first_name }} {{ employee.last_name }}
+        {% endif %}
+        {% endfor %}
 
     </section>
 
