--- a/hrapp/templates/computers/computer_list.html
+++ b/hrapp/templates/computers/computer_list.html
@@ -9,8 +9,7 @@
     <ol>
     {% for computer in all_computers %}
         <li>
-             make: {{ computer.make }} model: {{ computer.model}}
-
+            <a href="{% url 'hrapp:computer' computer.id %}">make: {{ computer.make }} model: {{ computer.model}}</a>
         </li>
     {% endfor %}
     </ol>
