added computer filter bar

--- a/hrapp/templates/computers/computer_list.html
+++ b/hrapp/templates/computers/computer_list.html
@@ -4,6 +4,7 @@
   <div class="parent">
   <h1>Computers</h1>
   <form action="{% url 'hrapp:computer_search' %}" method="post">
+  {% csrf_token %}
 
 
         <fieldset>
