--- a/hrapp/templates/computers/computer_list.html
+++ b/hrapp/templates/computers/computer_list.html
@@ -10,6 +10,8 @@
         <fieldset>
             {% comment %} <label for="search">search: </label> {% endcomment %}
             <input id="search" type="text" name="search" placeholder="Computer Make or Model">
+            <a href="{% url 'hrapp:computer_list' %}">Clear Search Flter</a>
+
         </fieldset>
   </form>
   </div>
