basic delete works

--- a/hrapp/templates/computers/computer_details.html
+++ b/hrapp/templates/computers/computer_details.html
@@ -9,27 +9,25 @@
         {% if computer.decommission_date %}
             <div>decommissoned date: {{ computer.decommission_date }}</div>
         {% endif %}
-        {% for employee in employees %}
-            {% if employee.computer_id_id == computer.id %}
+            {% if employees %}
+            {% for employee in employees%}
             <div> current assigned employee: {{ employee.first_name }} {{ employee.last_name }} </div>
+            {% endfor %}
             {% endif %}
-        {% endfor %}
 
     </section>
 
     <section id="computer-actions" style="display:flex;">
         <form action="{% url 'hrapp:computer' computer.id %}" method="POST">
             {% csrf_token %}
-            {% for employee in employees %}
-                {% if employee.computer_id_id == computer.id %}
+                {% if employees %}
                     <input type="hidden" name="actual_method" value="PUT">
-                    <input type="submit" value="Update" />
-                    <button>decommisson</button>
-                {% elif employee.computer_id_id != computer.id %}
+                    <input type="submit" value="Decommisson" />
+                {% else %}
                     <input type="hidden" name="actual_method" value="DELETE">
                     <button>Delete</button>
                 {% endif %}
-            {% endfor %}
+            
 
 
         </form>
