Added nav bar to details

--- a/hrapp/templates/training_programs/program_detail.html
+++ b/hrapp/templates/training_programs/program_detail.html
@@ -1,3 +1,5 @@
+{% extends 'shared/base.html' %}
+{% block content %}
 {% load staticfiles %}
 <!DOCTYPE html>
 <html>
@@ -31,3 +33,4 @@
     </form>
   </body>
 </html>
+{% endblock %}
