--- a/hrapp/templates/training_programs/program_detail.html
+++ b/hrapp/templates/training_programs/program_detail.html
@@ -19,6 +19,7 @@
         </li>
     {% endfor %}
     </ol>
+    {% if user.is_authenticated %}
     <form action="{% url 'hrapp:program' Program.id %}" method="POST">
         {% csrf_token %}
         <input type="hidden" name="actual_method" value="EDIT">
@@ -29,5 +30,6 @@
         <input type="hidden" name="actual_method" value="DELETE">
         <button>Delete</button>
     </form>
+    {% endif %}
   </body>
 </html>
