--- a/hrapp/templates/employees/employees_list.html
+++ b/hrapp/templates/employees/employees_list.html
@@ -2,8 +2,10 @@
 
 {% block content %}
 <h1>Employees</h1>
-
+{% if user.is_authenticated %}
 <a href="{% url 'hrapp:employee_form' %}">Add Another Employee</a>
+{% endif %}
+
 <ol>
 {% for employee in employees %}
     <li>
