Edit redirects to details and updates

--- a/hrapp/templates/training_programs/training_form.html
+++ b/hrapp/templates/training_programs/training_form.html
@@ -11,6 +11,7 @@
         <form action="{% url 'hrapp:training_list' %}" method="post">
     {% endif %}
         {% csrf_token %}
+        <input type="hidden" name="program_id" value="{{ Program.id }}" />
         <fieldset>
             <label for="title">Title: </label>
             <input id="title" type="text" name="title" value="{{ Program.title }}">
